# Skiff

./: README.md  README.zh-CN.md  components.json  index.html  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release-linux.yml  release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  lib.rs  main.rs  tray.rs
src-tauri/src/models/: agent_cleanup.rs  cleanup.rs  disk.rs  env_vars.rs  files.rs  info.rs  mod.rs  packages.rs  settings.rs  space.rs
src-tauri/src/services/: agent_cleanup.rs  cleanup_targets.rs  disk.rs  env_vars.rs  files.rs  mod.rs  packages.rs  settings.rs  space.rs  space_ai.rs  system.rs
src-tauri/src/services/agent_cleanup/: claude.rs  codex.rs  shared.rs
src-tauri/src/services/cleanup_targets/: definitions.rs  engine.rs  mod.rs  spec.rs
src-tauri/src/services/cleanup_targets/providers/: linux.rs  macos.rs  mod.rs  shared.rs  windows.rs
src-tauri/src/services/space_ai/: client.rs  payload.rs  runtime.rs  stream.rs  tools.rs
src/components/: WindowTitlebar.tsx
src/lib/: cleanup.ts  format.ts  i18n.tsx  targetTranslations.ts
src/locales/: en-US.json  target-en-US.json  target-zh-CN.json  zh-CN.json
src/pages/: AboutPage.tsx  AgentCleanupPage.tsx  ApplicationCleanupPage.tsx  DuplicateFilesPage.tsx  EnvironmentPage.tsx  HistoryPage.tsx  JunkCleanupPage.tsx  LargeFilesPage.tsx  OverviewPage.tsx  SettingsPage.tsx  SpaceAnalysisPage.tsx
src/types/: cleanup.ts
(+30 files in other folders)
