[package]
name = "skiff"
version = "1.0.0"
description = "local cross-platform disk cleanup tool"
authors = ["shiyu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skiff_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rusqlite = { version = "0.40.1", features = ["bundled"] }
fs2 = "0.4.3"
plist = "1.9.0"
trash = "5.2.6"

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"

[dev-dependencies]
tempfile = "3"
